# scrape_text

./: .info.cfg  .pre-commit-config.yaml  .pre-commit-template.yaml  .travis.yml  Pipfile  README.md  __init__.py  pyproject.toml  requirements.txt  scrape_text.py  scraper.json  scraper.py  setup.py
implore/: implore.py  manage.py
implore/implore/: urls.py  wsgi.py
